--- a/bookity/package.json
+++ b/bookity/package.json
@@ -2,7 +2,7 @@
   "name": "bookity",
   "license": "0BSD",
   "version": "1.0.0",
-"main": "expo-router/entry",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "expo": "~52.0.43",
     "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
